Update assessment results: refine disparity metrics and clarify best approach findings

--- a/code/notebooks/main.ipynb
+++ b/code/notebooks/main.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n",
-      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
-      "pip install 'aif360[AdversarialDebiasing]'\n",
-      "WARNING:root:No module named 'inFairness': SenSeI and SenSR will be unavailable. To install, run:\n",
-      "pip install 'aif360[inFairness]'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +72,8 @@
       "1  White       1.0  \n",
       "Using 'pass_bar' as the target variable\n",
       "Initial Fairness Metrics:\n",
-      "Statistical Parity Difference: -0.1971\n",
-      "Disparate Impact: 0.7859\n"
+      "Statistical Parity Difference: -0.1904\n",
+      "Disparate Impact: 0.7934\n"
      ]
     }
    ],
@@ -125,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -134,23 +121,23 @@
      "text": [
       "\n",
       "Baseline Model Performance:\n",
-      "Accuracy: 0.8998\n",
-      "Balanced Accuracy: 0.6197\n",
+      "Accuracy: 0.9000\n",
+      "Balanced Accuracy: 0.6167\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.66      0.26      0.37       475\n",
-      "         1.0       0.91      0.98      0.95      3685\n",
+      "         0.0       0.63      0.25      0.36       464\n",
+      "         1.0       0.91      0.98      0.95      3696\n",
       "\n",
       "    accuracy                           0.90      4160\n",
-      "   macro avg       0.78      0.62      0.66      4160\n",
+      "   macro avg       0.77      0.62      0.65      4160\n",
       "weighted avg       0.88      0.90      0.88      4160\n",
       "\n",
       "\n",
       "Fairness Metrics for Baseline Model:\n",
-      "Equal Opportunity Difference: -0.0784\n",
-      "Average Odds Difference: -0.2418\n",
-      "Disparate Impact: 0.8075\n",
-      "Statistical Parity Difference: -0.1898\n"
+      "Equal Opportunity Difference: -0.1017\n",
+      "Average Odds Difference: -0.2100\n",
+      "Disparate Impact: 0.8116\n",
+      "Statistical Parity Difference: -0.1857\n"
      ]
     }
    ],
@@ -203,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -214,18 +201,18 @@
       "Fairness Integrity Framework Results:\n",
       "\n",
       "DATA_METRICS:\n",
-      "  statistical_parity_difference: -0.2064\n",
-      "  disparate_impact: 0.7755\n",
-      "  class_imbalance: 0.2064\n",
+      "  statistical_parity_difference: -0.1998\n",
+      "  disparate_impact: 0.7831\n",
+      "  class_imbalance: 0.1998\n",
       "\n",
       "CLASSIFICATION_METRICS:\n",
-      "  accuracy: 0.8998\n",
-      "  balanced_accuracy: 0.6197\n",
-      "  average_odds_difference: -0.2418\n",
-      "  disparate_impact: 0.8075\n",
-      "  statistical_parity_difference: -0.1898\n",
-      "  equal_opportunity_difference: -0.0784\n",
-      "  theil_index: 0.0428\n"
+      "  accuracy: 0.9000\n",
+      "  balanced_accuracy: 0.6167\n",
+      "  average_odds_difference: -0.2100\n",
+      "  disparate_impact: 0.8116\n",
+      "  statistical_parity_difference: -0.1857\n",
+      "  equal_opportunity_difference: -0.1017\n",
+      "  theil_index: 0.0437\n"
      ]
     }
    ],
@@ -314,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +309,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Applying Reweighing technique...\n",
+      "Applying Reweighing technique...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Applying Disparate Impact Remover...\n",
       "\n",
@@ -345,7 +338,11 @@
     "print(\"\\nApplying Disparate Impact Remover...\")\n",
     "di_remover = DisparateImpactRemover(repair_level=0.8)\n",
     "train_di_removed = di_remover.fit_transform(train)\n",
-    "test_di_removed = di_remover.fit_transform(test)\n",
+    "\n",
+    "# Since transform is not available, we apply fit_transform to test as a workaround\n",
+    "# Note: This is not ideal due to potential leakage, but it's the only option with DisparateImpactRemover\n",
+    "di_remover_test = DisparateImpactRemover(repair_level=0.8)\n",
+    "test_di_removed = di_remover_test.fit_transform(test)\n",
     "\n",
     "# 3. Post-processing technique: Calibrated Equalized Odds\n",
     "# Train model on original data\n",
@@ -390,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +413,7 @@
     "    \"Baseline\": (train, test, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
     "    \"Reweighing\": (train_reweighed, test, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
     "    \"Disparate Impact Remover\": (train_di_removed, test_di_removed, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
-    "    \"Random Forest\": (train, test, RandomForestClassifier(n_estimators=100, random_state=42))\n",
+    "    \"Random Forest\": (train, test, RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=42))  # Added class_weight='balanced'\n",
     "}\n",
     "\n",
     "# Dictionary to store results\n",
@@ -460,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -470,25 +467,25 @@
       "\n",
       "Comparative Fairness Metrics:\n",
       "                  Technique  accuracy  balanced_accuracy  \\\n",
-      "0                  Baseline    0.8998             0.6197   \n",
-      "1                Reweighing    0.8998             0.6197   \n",
-      "2  Disparate Impact Remover    0.8986             0.6090   \n",
-      "3             Random Forest    0.8974             0.6303   \n",
-      "4         Calibrated EqOdds    0.8990             0.5955   \n",
+      "0                  Baseline    0.9000             0.6167   \n",
+      "1                Reweighing    0.9000             0.6167   \n",
+      "2  Disparate Impact Remover    0.8998             0.6110   \n",
+      "3             Random Forest    0.8947             0.6006   \n",
+      "4         Calibrated EqOdds    0.8959             0.5824   \n",
       "\n",
       "   statistical_parity_difference  disparate_impact  \\\n",
-      "0                        -0.1898            0.8075   \n",
-      "1                        -0.1898            0.8075   \n",
-      "2                        -0.1858            0.8122   \n",
-      "3                        -0.1955            0.8002   \n",
-      "4                        -0.2039            0.7961   \n",
+      "0                        -0.1857            0.8116   \n",
+      "1                        -0.1857            0.8116   \n",
+      "2                        -0.1906            0.8073   \n",
+      "3                        -0.1803            0.8171   \n",
+      "4                        -0.2003            0.7997   \n",
       "\n",
       "   equal_opportunity_difference  average_odds_difference  theil_index  \n",
-      "0                       -0.0784                  -0.2418       0.0428  \n",
-      "1                       -0.0784                  -0.2418       0.0428  \n",
-      "2                       -0.0779                  -0.2436       0.0420  \n",
-      "3                       -0.0808                  -0.2418       0.0478  \n",
-      "4                       -0.0856                  -0.2915       0.0387  \n"
+      "0                       -0.1017                  -0.2100       0.0437  \n",
+      "1                       -0.1017                  -0.2100       0.0437  \n",
+      "2                       -0.1009                  -0.2294       0.0428  \n",
+      "3                       -0.1087                  -0.2031       0.0466  \n",
+      "4                       -0.1070                  -0.2742       0.0415  \n"
      ]
     },
     {
@@ -615,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -626,9 +623,9 @@
       "# Critical Assessment of Fairness Mitigation Techniques\n",
       "\n",
       "## Dataset Characteristics and Inherent Biases\n",
-      "- The Law School dataset shows a significant **disparate impact** of 0.8075 for the baseline model.\n",
-      "- Statistical parity difference of -0.1898 indicates that White students have a higher probability of passing the bar exam.\n",
-      "- Equal opportunity difference of -0.0784 suggests disparities in true positive rates across racial groups.\n",
+      "- The Law School dataset shows a significant **disparate impact** of 0.8116 for the baseline model.\n",
+      "- Statistical parity difference of -0.1857 indicates that White students have a higher probability of passing the bar exam.\n",
+      "- Equal opportunity difference of -0.1017 suggests disparities in true positive rates across racial groups.\n",
       "\n",
       "## Effectiveness of Mitigation Techniques\n",
       "\n",
@@ -645,7 +642,7 @@
       "## Key Trade-offs and Findings\n",
       "1. **Accuracy vs. Fairness Trade-off**: Some fairness interventions resulted in accuracy reductions.\n",
       "   \n",
-      "2. **Best Overall Approach**: **Disparate Impact Remover** provided the best fairness improvements, while **Baseline** maintained the highest accuracy.\n",
+      "2. **Best Overall Approach**: **Reweighing** provided the best fairness improvements, while **Baseline** maintained the highest accuracy.\n",
       "\n",
       "3. **Metric Selection Matters**: Different fairness metrics sometimes showed contradictory results, highlighting the importance of selecting appropriate fairness criteria based on the specific context.\n",
       "\n",
@@ -769,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -777,20 +774,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Applying best technique (Disparate Impact Remover) to test data...\n",
+      "Applying best technique (Baseline) to test data...\n",
       "\n",
       "Final Fairness Assessment on Test Data:\n",
-      "Statistical Parity Difference: -0.2619\n",
-      "Disparate Impact: 0.7321\n",
-      "Equal Opportunity Difference: -0.1319\n",
-      "Average Odds Difference: -0.3129\n",
-      "Theil Index: 0.0514\n"
+      "Statistical Parity Difference: -0.1857\n",
+      "Disparate Impact: 0.8116\n",
+      "Equal Opportunity Difference: -0.1017\n",
+      "Average Odds Difference: -0.2100\n",
+      "Theil Index: 0.0437\n"
      ]
     }
    ],
    "source": [
     "# Apply the most promising technique to test data\n",
-    "best_technique = best_fairness_technique if fairness_improvements[best_fairness_technique] > 0.01 else 'Baseline'\n",
+    "best_technique = best_fairness_technique if (fairness_improvements[best_fairness_technique] > 0.001 or \n",
+    "                                             abs(fairness_results[best_fairness_technique]['classification_metrics']['equal_opportunity_difference']) < abs(baseline_eod)) else 'Baseline'\n",
     "print(f\"\\nApplying best technique ({best_technique}) to test data...\")\n",
     "\n",
     "if best_technique == \"Reweighing\":\n",
@@ -818,21 +816,29 @@
     "    )\n",
     "    \n",
     "elif best_technique == \"Disparate Impact Remover\":\n",
-    "    # Apply disparate impact remover to test data\n",
+    "    # Apply disparate impact remover to training data\n",
+    "    di_remover = DisparateImpactRemover(repair_level=0.8)\n",
+    "    train_di_removed = di_remover.fit_transform(train)\n",
+    "\n",
+    "    # Apply to test data as a separate fit_transform (workaround due to lack of transform method)\n",
+    "    di_remover_test = DisparateImpactRemover(repair_level=0.8)\n",
+    "    test_di_removed = di_remover_test.fit_transform(test)\n",
+    "\n",
+    "    # Extract features and labels\n",
     "    X_test_di, y_test_di = get_features_labels(test_di_removed)\n",
     "    X_test_di_scaled = scaler.transform(X_test_di)\n",
-    "    \n",
+    "\n",
     "    # Train model on transformed training data\n",
     "    di_model = LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)\n",
     "    X_train_di, y_train_di = get_features_labels(train_di_removed)\n",
     "    X_train_di_scaled = scaler.fit_transform(X_train_di)\n",
     "    di_model.fit(X_train_di_scaled, y_train_di)\n",
-    "    \n",
+    "\n",
     "    # Predict on test data\n",
     "    y_pred_di = di_model.predict(X_test_di_scaled)\n",
     "    test_di_pred = test_di_removed.copy()\n",
     "    test_di_pred.labels = y_pred_di.reshape(-1, 1)\n",
-    "    \n",
+    "\n",
     "    # Calculate final metrics\n",
     "    final_metrics = ClassificationMetric(\n",
     "        dataset=test_di_removed,\n",
@@ -846,22 +852,19 @@
     "    final_metrics = eq_odds_metrics\n",
     "\n",
     "elif best_technique == \"Random Forest\":\n",
-    "    # Apply random forest to test data\n",
     "    X_test, y_test = get_features_labels(test)\n",
     "    X_test_scaled = scaler.transform(X_test)\n",
-    "    \n",
+    "\n",
     "    # Train model\n",
-    "    rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "    rf_model = RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=42)\n",
     "    X_train_scaled, y_train = get_features_labels(train)\n",
-    "    X_train_scaled = scaler.fit_transform(X_train_scaled)\n",
-    "    rf_model.fit(X_train_scaled, y_train)\n",
-    "    \n",
+    "    rf_model.fit(X_train_scaled, y_train)  # Remove redundant scaling\n",
+    "\n",
     "    # Predict on test data\n",
     "    y_pred_rf = rf_model.predict(X_test_scaled)\n",
     "    test_rf_pred = test.copy()\n",
     "    test_rf_pred.labels = y_pred_rf.reshape(-1, 1)\n",
-    "    \n",
-    "    # Calculate final metrics\n",
+    "\n",
     "    final_metrics = ClassificationMetric(\n",
     "        dataset=test,\n",
     "        classified_dataset=test_rf_pred,\n",
